Wed Nov 16 15:47:12 EET 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added SHA-256 to crypto library.  The SHA-256 takes now
	  precedence over SHA-1.

Wed Nov 16 00:36:53 CET 2005  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* fixed wrong return code in term_init.  Affected file
	  apps/irssi/src/fe-text/terminfo-core.c
	  
Mon Sep 12 18:13:38 CEST 2005  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* and it doesn't return FILE* but a file descriptor.  Affected
	  file apps/silcd/silcd.c

Mon Sep  5 18:40:22 CEST 2005  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* mkstemp returns -1 on error, thanks to brad@comstyle.com for
	  pointing this out.  Affected file apps/silcd/silcd.c

Fri Sep  2 23:44:37 CEST 2005  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Fixed the insecure temporary file creation issue now that it's
	  even on bugtraq... Affected file apps/silcd/silcd.c

Wed Aug 24 18:27:48 CEST 2005  Patrik Weiskircher <pat@icore.at>

	* Before creating a channel key we need to remove the private key
	  mode, otherwise no key is created. Affected file
	  apps/silcd/command.c

Fri Aug 19 15:20:05 CEST 2005  Patrik Weiskircher <pat@icore.at>

	* Before checking ip/hostname of SilcSocketConnection, check
	  if its not doing a host lookup currently. Fixes atleast one
	  crash when many people connect at the same time.
	  Affected file apps/silcd/server_util.c.

Thu May 26 20:31:06 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Check for valid return value from regcomp.  Affected file
	  lib/silcutil/unix/silcunixutil.c.

Tue May 10 19:55:13 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Check for FD_SETSIZE in silc_select to not go over.
	  Affected file lib/silcutil/unix/silcunixschedule.c.

Tue May 10 15:11:53 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Rewritten SILC Log API.  Affected files lib/silcutil/silclog.[ch].

Mon May  9 12:00:08 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
