@@ -1,3 +1,8 @@
+Sat Nov 19 17:34:51 EET 2005  Pekka Riikonen <priikone@silcnet.org>
+
+	* Added SilcMime API to lib/silcutil/silcmime.[ch].  The old
+	  silc_mime_parse is available but deprecated.
+
 Wed Nov 16 15:47:12 EET 2005  Pekka Riikonen <priikone@silcnet.org>
 
 	* Added SHA-256 to crypto library.  The SHA-256 takes now
